Fix change password link spacing (#482)
* Fix change password link spacing

* Update last-child form group style

--- a/ui/src/scss/_vanilla-overrides.scss
+++ b/ui/src/scss/_vanilla-overrides.scss
@@ -6,7 +6,7 @@
 
 // 19-08-2019 Caleb: Form submit button too close to input when $multi = 1
 // https://github.com/canonical-web-and-design/vanilla-framework/issues/2497
-.p-form__group:last-of-type {
+.p-form__group:last-child {
   margin-bottom: $spv-outer--medium;
 }
 
